# firmaboard

./: .cursorrules  .gitignore  manage.py
backend/: .cursorrules  pyproject.toml  requirements.txt
backend/core/: admin.py  models.py  tests.py  urls.py  views.py
backend/core/management/commands/: reset_db.py
backend/core/migrations/: 0001_initial.py
backend/data_import/: admin.py  models.py  serializers.py  urls.py  views.py
backend/data_import/migrations/: 0001_initial.py
backend/farms/: models.py  serializers.py  urls.py  views.py
backend/farms/migrations/: 0001_initial.py
backend/firmaboard/: settings.py  urls.py
backend/timeseries/: admin.py  managers.py
backend/timeseries/migrations/: 0001_initial.py
core/: admin.py
core/management/commands/: reset_db.py
core/migrations/: 0001_initial.py
data_import/migrations/: 0001_initial.py
farms/: admin.py  models.py
farms/management/commands/: reset_db.py
farms/migrations/: 0001_initial.py  0002_remove_solarfarm_panel_manufacturer_and_more.py  0003_windturbinemodel_generator_type_and_more.py
firmaboard/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx  TenantContext.tsx
timeseries/: admin.py  managers.py  models.py
timeseries/migrations/: 0001_initial.py
(+36 files in other folders)
