[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-timescaledb>=0.2.13",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "google-auth>=2.40.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
]
